--- a/MVCBase/Areas/SuperAdmin/Views/Shared/_SuperAdminLayout.cshtml
+++ b/MVCBase/Areas/SuperAdmin/Views/Shared/_SuperAdminLayout.cshtml
@@ -73,15 +73,15 @@
                         <!-- Add the class "current" to current menu item -->
                         News Manage </a>
                         <ul>
-                            <li><a id="NewsList" href="@Url.Action("index","NewsList")">消息列表</a></li>
+                            <li><a id="NewsList" href="@Url.Action("index","NewsList")">最新消息列表</a></li>
                             <!-- Add class "current" to sub menu items also -->
-                            <li><a id="NewsOperate" href="@Url.Action("index","NewsOperate")">新增消息</a></li>
+                            <li><a id="NewsOperate" href="@Url.Action("index","NewsOperate")">新增最新消息</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="KeywordManage" class="nav-top-item">Keyword Manage </a>
+                    <li><a href="#" id="MediumManage" class="nav-top-item">Medium Manage </a>
                         <ul>
-                            <li><a id="AddKeyword" href="/Views/Superadmin/Keyword.html">新增關鍵字</a></li>
-                            <li><a id="KeywordList" href="/Views/Superadmin/KeywordList.html">關鍵字列表</a></li>
+                            <li><a id="MediumList" href="@Url.Action("index","MediumList")">媒體報道列表</a></li>
+                            <li><a id="MediumOperate" href="@Url.Action("index","MediumOperate")">新增媒體報道</a></li>
                         </ul>
                     </li>
                     <li><a href="#" class="nav-top-item">Image Gallery </a>
