--- a/MVCBase/Views/Shared/_Layout.cshtml
+++ b/MVCBase/Views/Shared/_Layout.cshtml
@@ -32,32 +32,11 @@
                     <div style="margin-top: -3px;">
                         <img src="@Url.Content("~/Content/Base/Images/copyright.png")" alt="COPYRIGHT(C) 2012 HAI CHI. ALL RIGHTS RESERVED" /></div>
                 </div>
-                <div class="Base_fb"></div>
+                <div class="Base_fb"><a style="display: block;height: 100%;width: 100%;" href="http://www.facebook.com/fucoi520" alt="Fucoi藻美學" title="Fucoi藻美學"></a></div>
             </footer>
         </div>
         <div id="indexline_right"></div>
 
     </div>
-    @*    <div class="page">
-        <header>
-            <div id="title">
-                <h1>我的 MVC 应用程序</h1>
-            </div>
-            <div id="logindisplay">
-                @Html.Partial("_LogOnPartial")
-            </div>
-            <nav>
-                <ul id="menu">
-                    <li>@Html.ActionLink("主页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("关于", "About", "Home")</li>
-                </ul>
-            </nav>
-        </header>
-        <section id="main">
-            @RenderBody()
-        </section>
-        <footer>
-        </footer>
-    </div>*@
 </body>
 </html>
