--- a/MVCBase/Views/Shared/_Layout.cshtml
+++ b/MVCBase/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     <a href="@Url.Action("about","home")" class="menubar2"></a>
                     <a href="@Url.Action("product","home")" class="menubar3"></a>
                     <a href="@Url.Action("key","home")" class="menubar4"></a>
-                    <a href="" class="menubar5"></a>
-                    <a href="" class="menubar6"></a>
+                    <a href="@Url.Action("people","home")" class="menubar5"></a>
+                    <a href="@Url.Action("medium","list")" class="menubar6"></a>
                     <a href="@Url.Action("news","list")" class="menubar7"></a>
                 </div>
             </header>
