--- a/MVCBase/Areas/SuperAdmin/Views/MediumList/Index.cshtml
+++ b/MVCBase/Areas/SuperAdmin/Views/MediumList/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-    @model IList<MVCBase.Domain.Entity.Ba_News>
+    @model IList<MVCBase.Domain.Entity.Ba_Medium>
 
 <!-- Page Head -->
-<h2>最新消息列表</h2>
+<h2>媒體報道列表</h2>
 <p id="page-intro">
-    News Listing
+    Medium Listing
 </p>
 <div class="clear">
 </div>
@@ -14,7 +14,7 @@
 <div class="content-box">
     <!-- Start Content Box -->
     <div class="content-box-header">
-        <h3>最新消息Listing</h3>
+        <h3>媒體報道Listing</h3>
         <div class="clear">
         </div>
     </div>
@@ -27,13 +27,13 @@
                     <img src="/Areas/SuperAdmin/Content/images/icons/cross_grey_small.png" title="Close this notification"
                         alt="close" /></a>
                 <div>
-                    以下列出皆為新近最新消息,請根據提示進行操作!
+                    以下列出皆為新近媒體報道,請根據提示進行操作!
                 </div>
             </div>
             <table>
                 <thead>
                     <tr>
-                        <th style="width: 80px;">NEWS編號
+                        <th style="width: 100px;">Medium編號
                         </th>
                         <th style="text-align: left;">標題
                         </th>
@@ -49,13 +49,13 @@
                     </tr>
                 </tfoot>
                 <tbody>
-                    @foreach (var news in Model)
+                    @foreach (var medium in Model)
                     {
-                        <tr id="news@(news.Ns_ID)">
-                            <td>@news.Ns_ID</td>
-                            <td>@news.Ns_Title</td>
-                            <td>@news.Ns_BuildTime</td>
-                            <td><a href="@Url.Action("index","NewsOperate", new {id=@news.Ns_ID})">修改</a> | <a href="javascript:void(0)" onclick="del(@news.Ns_ID)">刪除</a></td>
+                        <tr id="medium@(medium.Ns_ID)">
+                            <td>@medium.Ns_ID</td>
+                            <td>@medium.Ns_Title</td>
+                            <td>@medium.Ns_BuildTime</td>
+                            <td><a href="@Url.Action("index","MediumOperate", new {id=@medium.Ns_ID})">修改</a> | <a href="javascript:void(0)" onclick="del(@medium.Ns_ID)">刪除</a></td>
                         </tr>
                     }
                 </tbody>
@@ -103,20 +103,21 @@
             $.facebox.loading();
             $.ajax({
                 type: "GET",
-                url: "/SuperAdmin/NewsOperate/Delete/" + ns_id,
+                url: "/SuperAdmin/MediumOperate/Delete/" + ns_id,
                 dataType: "text",
                 error: function () {
                     alert("error");
                 },
                 success: function (msg) {
                     if (msg == "1") {
-                        $.facebox.reveal("NEWS " + ns_id + " 刪除成功!");
-                        $("#news" + ns_id).remove();
+                        $.facebox.reveal("Medium " + ns_id + " 刪除成功!");
+                        $("#medium" + ns_id).remove();
                     }
                     else
-                        $.facebox.reveal("NEWS " + ns_id + " 刪除失敗!");
+                        $.facebox.reveal("Medium " + ns_id + " 刪除失敗!");
                 }
             });
         }
     }
 </script>
+
