--- a/MVCBase/Views/Home/About.cshtml
+++ b/MVCBase/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 <style>
     .indexmain {
         height: 100%;
-        background: url(/content/Base/Images/about.png) no-repeat 0 0;
+        background: url(/content/Base/Images/about_bg.jpg) no-repeat 0 0;
         color: #FFF;
         overflow: hidden;
         line-height: 22px;
