--- a/MVCBase/Views/Home/People.cshtml
+++ b/MVCBase/Views/Home/People.cshtml
@@ -2,4 +2,122 @@
     ViewBag.Title = "People";
 }
 
-<h2>People</h2>
+<style>
+    .indexmain {
+        height: 100%;
+        background: url(/content/Base/Images/people_bg.png) no-repeat 0 0;
+        color: #FFF;
+        overflow: hidden;
+        font-family: 細明體;
+    }
+    #peoples {
+        margin: 26px auto; width: 850px; height: 570px;
+        position: relative;
+    }
+
+    #peoples div {
+        float: left;
+        border: 1px solid #FFF;
+        background-image: url(/content/Base/Images/pi.png);
+        background-repeat: no-repeat;
+        position: absolute;
+        cursor: pointer;
+    }
+    #peoples div:hover {
+        border: 1px solid #325b9b;
+    }
+    #peoples div a {
+        display: block;
+        height: 100%;
+        width: 100%;
+    }
+
+    #pi_1 {
+        background-position: -1px -1px;
+        width: 344px;
+        height: 136px;
+        top:0px;
+        left: 0px;
+    }
+
+    #pi_2 {
+        background-position: -1px -428px; width: 225px; height: 136px;
+        top: 0px;
+        left: 346px;
+    }
+
+    #pi_3 {
+        background-position: 0 -570px; width: 278px; height: 267px;
+        top: 0px;
+        left: 573px;
+    }
+
+    #pi_4 {
+        background-position: 0 -908px; width: 296px; height: 292px;
+        top: 138px;
+        left: 0px;
+    }
+
+    #pi_5 {
+        background-position: 0 -1205px; width: 128px; height: 292px;
+        top: 138px;
+        left: 298px;
+    }
+
+    #pi_6 {
+        background-position: 0 -1505px; width: 143px; height: 292px;
+        top: 138px;
+        left: 428px;
+    }
+
+    #pi_7 {
+        background-position: 0 -1802px; width: 278px; height: 161px;
+        top: 269px;
+        left: 573px;
+    }
+
+    #pi_8 {
+        background-position: 0 -1968px; width: 117px; height: 137px;
+        top: 432px;
+        left:0px;
+    }
+
+    #pi_9 {
+        background-position: -405px 0; width: 144px; height: 137px;
+        top: 432px;
+        left: 119px;
+    }
+
+    #pi_10 {
+        background-position: 0 -143px; width: 186px; height: 137px;
+        top: 432px;
+        left: 265px;
+    }
+
+    #pi_11 {
+        background-position: 0 -285px; width: 398px; height: 137px;
+        top: 432px;
+        left: 453px;
+    }
+</style>
+
+<div class="indexmain">
+    <div id="peoples">
+        <div id="pi_1"><a href="" target="_blank"></a></div>
+        <div id="pi_2"><a href="" target="_blank"></a></div>
+        <div id="pi_3"><a href="" target="_blank"></a></div>
+        <div id="pi_4"><a href="" target="_blank"></a></div>
+        <div id="pi_5"><a href="" target="_blank"></a></div>
+        <div id="pi_6"><a href="" target="_blank"></a></div>
+        <div id="pi_7"><a href="http://tw.myblog.yahoo.com/fafa710117/article?mid=60811&prev=60865&next=60784&l=a&fid=9" target="_blank"></a></div>
+        <div id="pi_8"><a href="http://www.fashionguide.com.tw/Beauty/08/resMsgL.asp?LinkTo=TopicL&TopicNum=10870&Cmd=&CmdNum=0&Cmd2=&Cmd2Num=0&Absolute=1&ItemNum=1&FromPost=t#Item" target="_blank"></a></div>
+        <div id="pi_9"><a href="http://www.fashionguide.com.tw/Beauty/08/resMsgL.asp?LinkTo=TopicL&TopicNum=10870&Cmd=&CmdNum=0&Cmd2=&Cmd2Num=0&Absolute=1&ItemNum=1&FromPost=t#Item" target="_blank"></a></div>
+        <div id="pi_10"><a href="http://www.fashionguide.com.tw/Beauty/08/resMsgL.asp?LinkTo=TopicL&TopicNum=10870&Cmd=&CmdNum=0&Cmd2=&Cmd2Num=0&Absolute=1&ItemNum=1&FromPost=t#Item" target="_blank"></a></div>
+        <div id="pi_11"><a href="" target="_blank"></a></div>
+    </div>
+</div>
+<script type="text/javascript">
+    $(function () {
+        $("header").addClass("Base_menubar5");
+    });
+</script>
