--- a/MVCBase/Views/List/News.cshtml
+++ b/MVCBase/Views/List/News.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "News";
 }
-    @model IList<MVCBase.Domain.Entity.Ba_News>
+@model IList<MVCBase.Domain.Entity.Ba_News>
 <style>
     #indexmain {
         overflow: hidden;
@@ -9,14 +9,17 @@
         height: 100%;
         background: url(/content/Base/Images/base_bg.png) no-repeat 0 0;
     }
+
     #listwrapper {
         width: 625px;
-        margin: 26px auto;
+        margin: 26px auto 5px auto;
     }
+
     .listitem {
         height: 180px;
         overflow: hidden;
     }
+
     .listimg {
         float: left;
         width: 173px;
@@ -24,23 +27,27 @@
         margin: 3px 5px;
         background: url(/content/Base/Images/listimg_bg.png) no-repeat 0 0;
         overflow: hidden;
-        vertical-align:middle;
+        vertical-align: middle;
         text-align: center;
     }
+
     .listimg table, .listimg tr {
         vertical-align: middle;
         height: 100%;
         width: 100%;
     }
+
     .listimg td {
         border: 0;
         vertical-align: middle;
         text-align: center;
     }
+
     .listimg td img {
         width: 134px;
         height: 120px;
     }
+
     .itemcontent {
         width: 420px;
         height: 100%;
@@ -50,33 +57,71 @@
         color: #FFF;
         font-family: 細明體;
     }
+
+    .itemcontent a {
+        color: #FFF;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    .itemtitle {
+        font-size: 110%;
+    }
+
     .itemtime {
         margin-top: 20px;
     }
+
     .itemtitle, .itemdescription {
         margin-top: 15px;
     }
 
+    .page_l{ background: url(/content/Base/Images/page.png) no-repeat 0 0; width: 22px; height: 31px; display: inline-block; cursor: pointer; } 
+    .page_p{ background: url(/content/Base/Images/page.png) no-repeat 0 -36px; width: 26px; height: 26px;display: inline-block; cursor: pointer;} 
+    .page_r{ background: url(/content/Base/Images/page.png) no-repeat 0 -67px; width: 22px; height: 31px; display: inline-block; cursor: pointer;} 
 </style>
 <div id="indexmain" class="clearfix">
     <div id="listwrapper">
         @foreach (var item in Model)
         {
-            string tempimg = MVCBase.Common.common.GetRegValue("<img .*?/>",item.Ns_Content);
+            string tempimg = MVCBase.Common.common.GetRegValue("<img .*?/>", item.Ns_Content);
             tempimg = tempimg.Length > 0 ? tempimg : "<img src=\"/content/Base/Images/defaultimg.jpg\" />";
-            <div class="listitem clearfix"><div class="listimg"><table><tr><td>@Html.Raw(tempimg)</td></tr></table></div>
+            <div class="listitem clearfix">
+                <div class="listimg"><a href="@Url.Action("news", "detail", new { id = @item.Ns_ID })">
+                    <table>
+                        <tr>
+                            <td>@Html.Raw(tempimg)</td>
+                        </tr>
+                    </table>
+                    </a>
+                </div>
                 <div class="itemcontent">
                     <div class="itemtime">@Convert.ToDateTime(item.Ns_BuildTime).ToString("yyyy/MM/dd")</div>
-                    <div class="itemtitle">@item.Ns_Title</div>
+                    <div class="itemtitle"><a href="@Url.Action("news", "detail", new { id = @item.Ns_ID })">@item.Ns_Title</a></div>
                     <div class="itemdescription">@item.Ns_SubTitle</div>
                 </div>
             </div>
         }
     </div>
+    <input type="hidden" id="currentpage" name="currentpage" value="@ViewBag.currentpage" />
+    <div id="pageinfo">@Html.Raw(ViewBag.pageinfo)</div>
 </div>
 
 <script type="text/javascript">
     $(function () {
         $("header").addClass("Base_menubar7");
     });
+    function topage(tt) {
+        var tid = $(tt).attr("id");
+        if (tid != undefined)
+            tid = tid.replace("page", "");
+        else {
+            var tclass = $(tt).attr("class");
+            if (tclass == "page_l")
+                tid = parseInt($("#currentpage").val()) - 1;
+            else if (tclass == "page_r")
+                tid = parseInt($("#currentpage").val()) + 1;
+        }
+        window.location.href = "/list/news/" + tid;
+    }
 </script>
