--- a/MVCBase/Views/Home/Key.cshtml
+++ b/MVCBase/Views/Home/Key.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "逆齡關鍵";
+    ViewBag.Title = "海基,小分子面膜褐藻醣膠 - 逆齡關鍵";
 }
 
 <style>
@@ -32,7 +32,7 @@
 
     #main_right {
         height: 100%;
-        width: 400px;
+        width: 430px;
         float: left;
         /*background: url(/content/Base/Images/product.png) no-repeat 0 -196px;*/
         color: #FFF;
