--- a/MVCBase/Views/List/Medium.cshtml
+++ b/MVCBase/Views/List/Medium.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Medium";
+    ViewBag.Title = "海基,小分子面膜褐藻醣膠 - 媒體報道";
 }
     @model IList<MVCBase.Domain.Entity.Ba_Medium>
 <style>
