--- a/MVCBase/Areas/SuperAdmin/Views/Shared/_SuperAdminLayout.cshtml
+++ b/MVCBase/Areas/SuperAdmin/Views/Shared/_SuperAdminLayout.cshtml
@@ -59,7 +59,7 @@
                 <!-- Sidebar Profile links -->
                 <div id="profile-links">
                     Hello, <a href="#" title="Edit your profile">@ViewBag.AdminName</a>, you have <a href="#messages"
-                        rel="modal" title="3 Messages">3 Messages</a><br />
+                        rel="modal" title="0 Messages">0 Messages</a><br />
                     <br />
                     <a href="#" title="View the Site">View the Site</a> | <a href="#" onclick="javascript:SignOut();" title="Sign Out">Sign
                         Out</a>
@@ -84,27 +84,9 @@
                             <li><a id="MediumOperate" href="@Url.Action("index","MediumOperate")">新增媒體報道</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" class="nav-top-item">Image Gallery </a>
-                        <ul>
-                            <li><a href="#">Upload Images</a></li>
-                            <li><a href="#">Manage Galleries</a></li>
-                            <li><a href="#">Manage Albums</a></li>
-                            <li><a href="#">Gallery Settings</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#" class="nav-top-item">Events Calendar </a>
-                        <ul>
-                            <li><a href="#">Calendar Overview</a></li>
-                            <li><a href="#">Add a new Event</a></li>
-                            <li><a href="#">Calendar Settings</a></li>
-                        </ul>
-                    </li>
                     <li><a href="#" class="nav-top-item">Settings </a>
                         <ul>
-                            <li><a href="#">General</a></li>
-                            <li><a href="#">Design</a></li>
-                            <li><a href="#">Your Profile</a></li>
-                            <li><a href="#">Users and Permissions</a></li>
+                            <li><a href="#">Admin Settings</a></li>
                         </ul>
                     </li>
                 </ul>
