--- a/MVCBase/Views/Home/People.cshtml
+++ b/MVCBase/Views/Home/People.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "People";
+    ViewBag.Title = "海基,小分子面膜褐藻醣膠 - 使用見證";
 }
 
 <style>
@@ -33,51 +33,51 @@
     }
 
     #pi_1 {
-        background-position: -1px -1px;
-        width: 344px;
+        background-position: 0px 0px;
+        width: 345px;
         height: 136px;
         top:0px;
         left: 0px;
     }
 
     #pi_2 {
-        background-position: -1px -428px; width: 225px; height: 136px;
+        background-position: 0px -425px; width: 225px; height: 136px;
         top: 0px;
-        left: 346px;
+        left: 347px;
     }
 
     #pi_3 {
-        background-position: 0 -570px; width: 278px; height: 267px;
+        background-position: 0 -566px; width: 278px; height: 267px;
         top: 0px;
-        left: 573px;
+        left: 574px;
     }
 
     #pi_4 {
-        background-position: 0 -908px; width: 296px; height: 292px;
+        background-position: 0 -838px; width: 297px; height: 292px;
         top: 138px;
         left: 0px;
     }
 
     #pi_5 {
-        background-position: 0 -1205px; width: 128px; height: 292px;
+        background-position: 0 -1135px; width: 128px; height: 292px;
         top: 138px;
-        left: 298px;
+        left: 299px;
     }
 
     #pi_6 {
-        background-position: 0 -1505px; width: 143px; height: 292px;
+        background-position: 0 -1432px; width: 144px; height: 292px;
         top: 138px;
-        left: 428px;
+        left: 429px;
     }
 
     #pi_7 {
-        background-position: 0 -1802px; width: 278px; height: 161px;
+        background-position: 0 -1729px; width: 278px; height: 161px;
         top: 269px;
-        left: 573px;
+        left: 574px;
     }
 
     #pi_8 {
-        background-position: 0 -1968px; width: 117px; height: 137px;
+        background-position: 0 -1895px; width: 117px; height: 137px;
         top: 432px;
         left:0px;
     }
@@ -89,13 +89,13 @@
     }
 
     #pi_10 {
-        background-position: 0 -143px; width: 186px; height: 137px;
+        background-position: 0 -141px; width: 186px; height: 137px;
         top: 432px;
         left: 265px;
     }
 
     #pi_11 {
-        background-position: 0 -285px; width: 398px; height: 137px;
+        background-position: 0 -283px; width: 399px; height: 137px;
         top: 432px;
         left: 453px;
     }
