--- a/MVCBase/Views/Shared/_Layout.cshtml
+++ b/MVCBase/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
+    <meta name="description" content="海基接觸到全新的海洋美容素材褐藻醣膠，褐藻醣膠近年來興起一股抗老熱潮，已成為歐、美、日許多頂級保養品當中，最關鍵的主打成分，海基歷時2年的合作研發，和行政院經濟部農委會水試所、Hi-Q共同發展出可提升外來膠原蛋白的關鍵之鑰，獨步全球的小分子褐藻醣膠更易於肌膚吸收，成為海基跨足醫學保養美容業的新興里程。" />
+    <meta name="keywords" content="fucoi,小分子面膜,褐藻醣膠,海基,fucobeauty逆齡美學" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
