--- a/MVCBase/Views/Detail/Medium.cshtml
+++ b/MVCBase/Views/Detail/Medium.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = Model.Ns_Title;
 }
-<link href="/Content/jquery.jscrollpane.css" rel="stylesheet" />
+@*<link href="/Content/jquery.jscrollpane.css" rel="stylesheet" />*@
 <style>
     .indexmain {
         height: 100%;
@@ -65,11 +65,11 @@
     </div>
         </div>
 </div>
-<script src="/scripts/jquery.mousewheel.js" type="text/javascript"></script>
-<script src="/scripts/jquery.jscrollpane.min.js" type="text/javascript"></script>
+@*<script src="/scripts/jquery.mousewheel.js" type="text/javascript"></script>
+<script src="/scripts/jquery.jscrollpane.min.js" type="text/javascript"></script>*@
 <script type="text/javascript">
     $(function () {
         $("header").addClass("Base_menubar6");
-        $(".detail_content").jScrollPane();
+        //$(".detail_content").jScrollPane();
     });
 </script>
