修改 "媒体报道" 为 "媒体報導"

--- a/MVCBase/Views/Detail/Medium.cshtml
+++ b/MVCBase/Views/Detail/Medium.cshtml
@@ -53,7 +53,7 @@
 
 <div class="indexmain clearfix">
     <div class="detail">
-    <div class="detail_1"><span>媒體報道列表</span>
+    <div class="detail_1"><span>媒體報導列表</span>
     </div>
     <div class="detail_2">
         <div class="detail_bar clearfix">
