修改keyword,description,title

--- a/MVCBase/Views/Detail/Medium.cshtml
+++ b/MVCBase/Views/Detail/Medium.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVCBase.Domain.Entity.Ba_Medium
 @{
-    ViewBag.Title = Model.Ns_Title;
+    ViewBag.Title = "海基,小分子面膜褐藻醣膠,膠原蛋白,保濕面膜,術後面膜" + Model.Ns_Title;
 }
 @*<link href="/Content/jquery.jscrollpane.css" rel="stylesheet" />*@
 <style>
