--- a/MVCBase/Views/List/News.cshtml
+++ b/MVCBase/Views/List/News.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "海基,小分子面膜褐藻醣膠 - 最新消息";
+    ViewBag.Title = "海基,小分子面膜褐藻醣膠,膠原蛋白,保濕面膜,術後面膜,膠原蛋白,保濕面膜,術後面膜 - 最新消息";
 }
 @model IList<MVCBase.Domain.Entity.Ba_News>
 <style>
